//
// Класс Menu инкапсулирует всю логику консольного меню работы с кольцом школьников.
//

#ifndef LAB4_MENU_H
#define LAB4_MENU_H

class Menu {
public:
    // Запустить основной цикл приложения (отображение меню, обработка выбора пользователя)
    void run();
};

#endif // LAB4_MENU_H


